fix(theme): reduce outline toc mask spacing

--- a/packages/core/src/theme/components/Outline/index.scss
+++ b/packages/core/src/theme/components/Outline/index.scss
@@ -48,7 +48,7 @@
     overflow: auto scroll;
     scrollbar-width: none;
 
-    mask-image: linear-gradient(#0000, #fff 12px calc(100% - 12px), #0000);
+    mask-image: linear-gradient(#0000, #fff 8px calc(100% - 8px), #0000);
 
     // limit height on mobile where outline is a floating panel
     @media (max-width: 1280px) {
